src/test/error/mutable.lns
{
   let val1, val2 = 0, 1;
   val1 = 1; // error
   val2 = 2; // error
}

{
   let! val1, val2 = 1, 2 {
      val1 = 1;
      val2 = 2;
   }
   then {
      val1 = 1; // error
      val2 = 2; // error
   };
}

{
   sync! val1, val2 = 1, 2 {
      val1 = 1;
      val2 = 2;
   }
   then {
      val1 = 1;
      val2 = 2;
   };
}

class Test {
   pub let val:int;
   pub let mut val2:int;
   pub fn func1() mut {
      self.val2 = 1;
   }
   pub fn func2() mut {
      self.val2 = 1;
   }
   pub fn func3() {
      self.val2 = 1; // error
   }
}
let test = new Test( 1, 2 );
test = new Test( 1, 2 );  // error
test.val = 1;  // error
test.val2 = 1; // error
test.func1();
test.func2();
test.func3();

let mut test2 = new Test( 1, 2 );
test2.val2 = 1;
test2.func1();
test2.func2();
test2.func3();

